# Stock-Price-Prediction-with-BERTopic

./: .env  .gitattributes  .gitignore  README.md  pyproject.toml  requirements.txt
BERTopic/src/: main.ipynb
bertopic_project/: main.py
bertopic_project/api/: main.py
bertopic_project/data/: yahoo_finance_scraper.py
bertopic_project/data/data_processed/: clean_reddit_data.csv  clean_stock_data.csv  reddit_with_vader_sentiment.csv
bertopic_project/data/processed/: clean_reddit_data.csv  daily_vader_sentiment.csv  reddit_with_topics.csv  topic_info.csv
bertopic_project/data/raw/: DJT_history.csv  META_history.csv  TSLA_history.csv  all_stocks_history.csv  reddit_data.csv  reddit_posts_ALL.csv  reddit_posts_META.csv  reddit_posts_TSLA.csv
bertopic_project/data/scraping_reddit/: reddit_scraping.py  scraper.py  scraper_praw.py  scraper_selenium.py
bertopic_project/data/scraping_yfinance/: historical_data.py  scraper.py  trending_tickers.py
bertopic_project/data_extraction/raw/: Tweets_TSLA.csv  reddit_data.csv  tesla_stock_history.csv
bertopic_project/data_extraction/scraping_X/: README.md  cli.py  x_scrapper.py
bertopic_project/data_extraction/scraping_reddit/: scraper_praw.py
bertopic_project/data_prediction/: future_predictions_v2.csv  future_predictions_v2_with_topics.csv  model.py  modele_v2.py
bertopic_project/preprocessing/: aya.py  preprocess.py  reddit_prep.py  sentiment_analysis_FINBERT.py  sentiment_analysis_VADER.py  topic_modeling.py  yfinance_prep.py
data/: reddit_data.csv  yfinance_data.csv
notebooks/: main.ipynb
(+14 files in other folders)
