[project]
name = "bertopic"
version = "0.1.0"
description = "This is a project on stock price prediction with sentiment analysis"
authors = [
    {name = "Chahla Tarmoun - Morgan Jowitt - Aya Mokhtar"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pandas (>=2.2.3,<3.0.0)",
    "ipykernel (>=6.29.5,<7.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
